--- a/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
+++ b/src/app/graph-qldocs-2/components/side-search/side-search.component.scss
@@ -1,9 +1,10 @@
 .side-search {
   background: #F0F3F4;
+  width: 360px;
 
   mat-form-field {
     margin: 20px;
-    width: 223px;
+    width: 315px;
     background: rgba(0, 0, 0, 0.06);
     height: 36px;
     border-radius: 4px;
@@ -52,7 +53,7 @@
   .line {
     margin: 0 20px;
     height: 1px;
-    width: 223px;
+    width: 315px;
     background: rgba(0, 0, 0, 0.12);
   }
 }
